# goth

./: .gitignore  CHANGELOG.md  DEMO-EXAMPLES.md  DEMO-OUTPUT-FORMATS.md  LANGUAGE.md  LLM_SPEC.md  README.md
.github/workflows/: ci.yml  release.yml
benchmark/: run_tests.py
benchmark/devstral/: DIAGNOSTIC.md  gistfile1.txt
benchmark/devstral/goth/: add.goth  factorial.goth  fibonacci.goth  main.goth  multiply.goth  safe_divide.goth  square.goth  tco_factorial.goth
benchmark/devstral2/: DIAGNOSTIC.md  gistfile1.txt
benchmark/devstral2/goth/: ackermann.goth  add_one.goth  binary_search.goth  compose.goth  double.goth  factorial.goth  fibonacci.goth  fold.goth  gamma_fact.goth  gcd.goth  harmonic.goth  identity.goth  is_even.goth  is_prime.goth  map.goth  modpow.goth  nth_prime.goth  square.goth
benchmark/grok-expert/: BENCHMARK-TESTS.md  CLAUDE-SKILLS.md  DIAGNOSTIC.md
benchmark/grok-expert/goth/: OUTPUT.md
benchmark/grok-expert/goth/algorithms/: binary_search.goth  count_primes.goth  isPrime.goth  isqrt.goth  modpow.goth  nth_prime.goth
benchmark/grok-expert/goth/basic/: abs.goth  add_one.goth  double.goth  identity.goth  is_even.goth  is_positive.goth  max_two.goth  min_two.goth  sign.goth  square.goth
benchmark/grok-expert/goth/higher_order/: all_positive.goth  any_negative.goth  apply_twice.goth  (+7 more)
benchmark/grok-expert/json/: DIAGNOSTIC.md  OUTPUT.md
benchmark/tests/: contracts.json  grok_expert.json  grok_expert_json.json  uncertainty.json
crates/: Cargo.toml
crates/goth-ast/: Cargo.toml
crates/goth-ast/examples/: json_ast_demo.rs  roundtrip_validation.rs
crates/goth-ast/src/: decl.rs  expr.rs  interval.rs  lib.rs  literal.rs  op.rs  pretty.rs  ser.rs  types.rs
crates/goth-check/: Cargo.toml
crates/goth-check/src/: builtins.rs  check.rs  context.rs  error.rs  infer.rs  lib.rs  shapes.rs  subst.rs  unify.rs
crates/goth-cli/: Cargo.toml  README.md
crates/goth-cli/src/: compiler.rs  main.rs  prelude.goth
crates/goth-eval/: Cargo.toml
crates/goth-eval/src/: error.rs  eval.rs  lib.rs  prim.rs  value.rs
crates/goth-llvm/: Cargo.toml
crates/goth-llvm/src/: emit.rs  error.rs  lib.rs  runtime.rs
crates/goth-mir/: Cargo.toml
crates/goth-mir/src/: lib.rs  lower.rs  mir.rs  print.rs
crates/goth-mir/tests/: integration.rs
crates/goth-mlir/: Cargo.toml
crates/goth-mlir/examples/: end-to-end-example.rs
crates/goth-mlir/src/: builder.rs  context.rs  emit.rs  error.rs  lib.rs  types.rs
crates/goth-mlir/src/dialects/: arith.rs  cf.rs  func.rs  goth.rs  linalg.rs  llvm.rs  memref.rs  mod.rs  scf.rs  tensor.rs
crates/goth-mlir/src/passes/: bufferize.rs  lower_goth.rs  lower_llvm.rs  mod.rs  optimize.rs
crates/goth-mlir/tests/: phase5_integration.rs
crates/goth-parse/: Cargo.toml  README.md
crates/goth-parse/src/: lexer.rs  lib.rs  loader.rs  parser.rs  resolve.rs
crates/goth-server/: Cargo.toml
crates/goth-server/src/: main.rs
docs/: BENCHMARK-ASSESSMENT.md  BENCHMARK-TESTS.md  CLAUDE-SKILLS.md  EFFECT-SYSTEM-ROADMAP.md  GOTH-LANGUAGE-REFERENCE-v0.1.md  MLIR-IMPLEMENTATION-PLAN.md  PHILOSOPHY.md  PROJECT-STATUS.md  SESSION-STATUS.md  tests.md
docs/archive/: CRITICAL-GAPS-REFERENCE-2026-01-19.md  GOTH-PROJECT-STATUS-2026-01-19.md  NEXT-STEPS-TACTICAL-2026-01-19.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: goth.tmLanguage.json
examples/: README.md  ackermann.goth  add_main.goth  awk_sum.goth  current.goth  echo.goth  enums.goth  factorial.goth  factorial2.goth  fibonacci.goth  gamma.goth  gate.goth  grep.goth  hello.goth  hello_main.goth  hello_unit.goth  io_main.goth  math_comprehensive.goth  math_test.goth  matmul.goth  newton_sqrt.goth  number_analyzer.goth  polynomial.goth  primes.goth  quicksort.goth  sed_replace.goth  sieve.goth  sign_test.goth  sum_to_n.goth  syzygy.goth  test_canvas.goth  test_filter.goth  test_iota.goth  truss.goth  tsp_anneal.goth  uppercase.goth  use_constants.goth  use_math.goth  vectors.goth  wc.goth
examples/complex/: complex_arithmetic.goth  euler_identity.goth  quaternion_rotation.goth  sqrt_negative.goth
examples/contracts/: abs_post.goth  closure_reuse_contract.goth  div_safe.goth  factorial_contract.goth  log_safe.goth  sqrt_safe.goth  tensor_identity_contract.goth  tensor_independence_contract.goth
examples/crypto/: base64.goth  blake3.goth  hashfile.goth  md5.goth  sha256.goth
examples/higher-order/: all_positive.goth  any_negative.goth  map_double.goth
examples/json/: ackermann.json  fibonacci.json  parse_simple.goth  roundtrip.goth  sieve.json  tsp_anneal.json
examples/lib/: constants.goth  math_utils.goth  single.goth
examples/linalg/: determinant.goth  eigenvalues.goth  eigenvectors.goth  matrix_inverse.goth  solve_linear.goth
examples/nockchain/: balance.goth  blocks.goth  tx_status.goth
examples/random/: buffon_pi.goth  mc_antithetic.goth  mc_importance.goth  mc_integrate.goth  rand_floats.goth
examples/simulation/: heat1d.goth  heat1d_config.goth  heat1d_tunable.goth  heat2d.goth  heat2d_config.goth  heat2d_tunable.goth  laplace2d.goth  newton_raphson.goth  power_iter.goth  wave1d.goth
examples/uncertainty/: add_uncertain.goth  chained_uncertain.goth  measure.goth  mul_uncertain.goth  sin_uncertain.goth  sqrt_uncertain.goth
jupyter/: example.ipynb  goth_kernel.py  install.sh  kernel.json
stdlib/: crypto.goth  io.goth  json.goth  list.goth  math.goth  option.goth  prelude.goth  random.goth  result.goth  string.goth
tests/: cli_test.sh  self_compile_test.sh  shape_check_good.goth  shape_check_tests.goth  stdlib_test.sh
tests/stdlib/: test_list.goth  test_math.goth  test_option.goth  test_prelude.goth  test_result.goth  test_string.goth
tools/nockchain-bridge/: Cargo.toml  README.md  build.rs
tools/nockchain-bridge/proto/nockchain/common/v1/: blockchain.proto  pagination.proto  primitives.proto
tools/nockchain-bridge/proto/nockchain/common/v2/: blockchain.proto
tools/nockchain-bridge/proto/nockchain/public/v2/: nockchain.proto
tools/nockchain-bridge/src/: client.rs  main.rs  protocol.rs
(+70 files in other folders)
