[workspace]
resolver = "2"
members = [
    "goth-ast",
    "goth-eval",
    "goth-parse",
    "goth-cli",
    "goth-check",
    "goth-mir",
    "goth-mlir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/goth-lang/goth"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"