[package]
name = "goth-ast"
version = "0.2.0"
edition = "2021"
description = "Abstract Syntax Tree for the Goth programming language"
license = "MIT"
repository = "https://github.com/goth-lang/goth"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
