[package]
name = "goth-check"
version = "0.2.0"
edition = "2021"
description = "Type checker for the Goth programming language"
license = "MIT"
repository = "https://github.com/goth-lang/goth"

[dependencies]
goth-ast = { path = "../goth-ast" }
thiserror = "2.0"

[dev-dependencies]
goth-parse = { path = "../goth-parse" }