[package]
name = "goth-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface and REPL for the Goth programming language"
license = "MIT"
repository = "https://github.com/goth-lang/goth"

[[bin]]
name = "goth"
path = "src/main.rs"

# Shelved: LLVM compiler (gothic)
# [[bin]]
# name = "gothic"
# path = "src/compiler.rs"

[dependencies]
goth-ast = { path = "../goth-ast" }
goth-eval = { path = "../goth-eval" }
goth-parse = { path = "../goth-parse" }
goth-check = { path = "../goth-check" }
# Shelved (LLVM/MLIR backend):
# goth-mir = { path = "../goth-mir" }
# goth-mlir = { path = "../goth-mlir" }
# goth-llvm = { path = "../goth-llvm" }
rustyline = "14.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
