[package]
name = "goth-parse"
version = "0.2.0"
edition = "2021"
description = "Parser for the Goth programming language"
license = "MIT"
repository = "https://github.com/goth-lang/goth"

[dependencies]
goth-ast = { path = "../goth-ast" }
thiserror = "2.0"
logos = "0.14"
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
pretty_assertions = "1.4"
