[package]
name = "nockchain-bridge"
version = "0.1.0"
edition = "2021"
description = "gRPC bridge sidecar for Nockchain, translating a line-based text protocol to/from the Nockchain public API"

[[bin]]
name = "nockchain-bridge"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
